# frame

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  pubspec.yaml
lib/: constants.dart  main.dart  main_app.dart  menu.dart  status_bar.dart
lib/api/: api.dart
lib/commands/: base_command.dart  set_map_blocks.dart
lib/menu/: menu.dart
lib/models/: bank_map.dart  encounters.dart  history.dart  map_block.dart  map_info.dart  map_selection.dart  position.dart  rom_info.dart
lib/notifiers/: editor.dart  is_ctrl_pressed.dart  is_shortcut_enabled.dart  status.dart
lib/painters/: grid_painter.dart  map_painter.dart  perms_painter.dart  rect_painter.dart
lib/panels/: banks_panel.dart  blocksheet_panel.dart  encounters_panel.dart  map_panel.dart  permsheet_panel.dart
lib/tabs/: tabbed_view_controller.dart  tabbed_view_theme.dart
lib/tools/: bucket.dart  eyedropper.dart  pencil.dart  tool.dart
lib/widgets/: disable_shortcut_text_field.dart  if_rom_loaded_widget.dart  int_range_text_field.dart  persistent_bar_scroll_view.dart
src/: encounter_table.rs  main.rs  map_info.rs  platform_channels.rs
