[package]
name = "frame"
version = "0.1.0"
edition = "2018"

[build-dependencies]
cargo-emit = "0.1"
nativeshell_build = "0.1.13"

[dependencies]
nativeshell = "0.1.13"
env_logger = "0.9.0"
pleat = { git = "https://github.com/merilec/pleat" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"
